layout.less: Make sure that big numbers in badges don't overflow
refs #3568

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -303,6 +303,9 @@ html.no-js .controls > .tabs {
           right: .5em;
           bottom: .25em;
           font-size: 75%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          max-width: 4em;
         }
       }
 
